# ResearchProject

./: .gitignore  AutoCPS.cabal  CHANGELOG.md  Goal.txt  PluginTest.cabal  README.md  bench-lazy.txt  bench-strict.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: PluginTest-0.1.0.0-inplace.conf  package.cache
src/: AutoCPS.hs  PluginTest.hs
test/: Main.hs
tests/: CPSTests.hs  Main.hs
