cabal-version:      2.4
name:               PluginTest
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             bueskyd
maintainer:         alexander@berg.dk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  PluginTest

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, ghc
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test-plugin
    type: exitcode-stdio-1.0
    build-depends: base, PluginTest
    hs-source-dirs: test
    ghc-options: -fplugin=PluginTest
    main-is: Main.hs
